--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ img {
     padding-right: 1rem;
 }
 
+
 /* TEXT */
 .text-center {
     text-align: center;
@@ -127,3 +128,29 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+ @media screen and (max-width:768px){
+    .container{
+        margin: 0;
+        width: 768px;
+    }
+ }
+
+
+ @media screen and (max-width:480px){
+    .container{
+        margin: 0;
+        width: 480px;
+    }
+
+    .row{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .steps .col, .lessons .col, .why-us .col{
+        width: 100%;
+    }
+ }
+
